[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ExoBoldItalic-VdrB.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Mirage-ZEzz.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/scripts/WinScreen.gd" type="Script" id=3]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float blur: hint_range(0.0, 2.5);
uniform float brightness: hint_range(0.0, 1.0);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur);
	COLOR.rgb *= brightness;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/blur = 2.5
shader_param/brightness = 0.6

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="WinScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 427.0
margin_top = 256.0
margin_right = 939.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 256 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 249.0
custom_constants/margin_right = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_right = 482.0
margin_bottom = 226.0

[node name="WinTitle" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 466.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Parabéns!"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 466.0
margin_bottom = 69.0

[node name="NextLevel" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 466.0
margin_bottom = 121.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Próxima fase"

[node name="Restart" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 466.0
margin_bottom = 173.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Reiniciar"

[node name="Quit" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 466.0
margin_bottom = 226.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Sair"

[connection signal="button_up" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/NextLevel" to="." method="_on_NextLevel_button_up"]
[connection signal="button_up" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_Restart_button_up"]
[connection signal="button_up" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_button_up"]
